Ensure transitions are on mobile too

--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -55,13 +55,10 @@
 .logo {
   width: 4rem;
   margin-bottom: 1.5rem;
+  transition: scale var(--transition);
 
-  @include min-width(md) {
-    transition: scale var(--transition);
-
-    &:hover {
-      scale: 1.1;
-    }
+  &:hover {
+    scale: 1.1;
   }
 
   &__wrapper {
